# pmake

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.phs  cache.phs  lockfile.phs  main.phs  pmake.conf  pmake.phs  utils.phs
Executable/: CMakeLists.txt
Executable/pmake/: CMakeLists.txt  pmake.rc  pmake_main.cpp
include/: Value.hpp
